--- a/HolePunching/HolePunching.csproj
+++ b/HolePunching/HolePunching.csproj
@@ -4,6 +4,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NetTopologySuite" Version="2.5.0" />
     <PackageReference Include="Stride.Engine" Version="4.2.0.1" />
     <PackageReference Include="Stride.Video" Version="4.2.0.1" />
     <PackageReference Include="Stride.Physics" Version="4.2.0.1" />
