--- a/HolePunching/HolePunching.csproj
+++ b/HolePunching/HolePunching.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net8.0</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -12,5 +12,8 @@
     <PackageReference Include="Stride.Particles" Version="4.2.0.1" />
     <PackageReference Include="Stride.UI" Version="4.2.0.1" />
     <PackageReference Include="Stride.Core.Assets.CompilerApp" Version="4.2.0.1" IncludeAssets="build;buildTransitive" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HolePuncher\HolePuncher.csproj" />
   </ItemGroup>
 </Project>
