--- a/HolePuncher/HolePuncher.csproj
+++ b/HolePuncher/HolePuncher.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,7 @@
     <PackageReference Include="Stride.Core" Version="4.2.0.1" />
     <PackageReference Include="Stride.Core.Mathematics" Version="4.2.0.1" />
     <PackageReference Include="Stride.Engine" Version="4.2.0.1" />
+    <PackageReference Include="Stride.Physics" Version="4.2.0.1" />
   </ItemGroup>
 
 </Project>
